--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -93,8 +93,6 @@ details, summary {
   border-radius: 100%;
   -webkit-transition: 0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity, 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
   transition: 0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity, 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
-  transition: 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform, 0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity;
-  transition: 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform, 0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity, 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -107,7 +105,7 @@ details, summary {
       opacity: 1;
       visibility: hidden; } }
 
-/* line 107, ../scss/layout/layout.scss */
+/* line 105, ../scss/layout/layout.scss */
 .cursor {
   width: 8px;
   height: 8px;
@@ -115,60 +113,64 @@ details, summary {
   -webkit-transition: .2s linear background-color;
   transition: .2s linear background-color; }
 
-/* line 115, ../scss/layout/layout.scss */
+/* line 113, ../scss/layout/layout.scss */
 .cursor.is-active {
   background-color: #FF0000; }
 
-/* line 119, ../scss/layout/layout.scss */
+/* line 117, ../scss/layout/layout.scss */
+.cursor.cursor-red {
+  background-color: #FF0000; }
+
+/* line 121, ../scss/layout/layout.scss */
 .aura {
   width: 32px;
   height: 32px;
   background-color: #222222;
   opacity: 0.5;
   -webkit-transform: translate(-12px, -12px);
-  transform: translate(-12px, -12px);
+          transform: translate(-12px, -12px);
   mix-blend-mode: difference;
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
 
-/* line 131, ../scss/layout/layout.scss */
+/* line 132, ../scss/layout/layout.scss */
 .title {
   font-size: 175px;
   line-height: 175px;
   font-weight: 300; }
   @media (max-width: 1024px) {
-    /* line 131, ../scss/layout/layout.scss */
+    /* line 132, ../scss/layout/layout.scss */
     .title {
       font-size: 97px;
       line-height: 97px; } }
   @media (max-width: 768px) {
-    /* line 131, ../scss/layout/layout.scss */
+    /* line 132, ../scss/layout/layout.scss */
     .title {
       font-size: 71px;
       line-height: 78px; } }
   @media (max-width: 390px) {
-    /* line 131, ../scss/layout/layout.scss */
+    /* line 132, ../scss/layout/layout.scss */
     .title {
       font-size: 62px;
       line-height: 74px; } }
 
-/* line 152, ../scss/layout/layout.scss */
+/* line 153, ../scss/layout/layout.scss */
 .socials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 25px; }
-  /* line 156, ../scss/layout/layout.scss */
+  /* line 157, ../scss/layout/layout.scss */
   .socials__link {
     color: whitesmoke;
     font-size: 16px;
     font-weight: 300;
     position: relative; }
     @media (max-width: 768px) {
-      /* line 156, ../scss/layout/layout.scss */
+      /* line 157, ../scss/layout/layout.scss */
       .socials__link {
         font-size: 11px; } }
-    /* line 166, ../scss/layout/layout.scss */
+    /* line 167, ../scss/layout/layout.scss */
     .socials__link:after {
       content: '';
       position: absolute;
@@ -178,13 +180,13 @@ details, summary {
       background-color: whitesmoke;
       width: 100%; }
       @media (max-width: 768px) {
-        /* line 166, ../scss/layout/layout.scss */
+        /* line 167, ../scss/layout/layout.scss */
         .socials__link:after {
           height: 1px; } }
-  /* line 181, ../scss/layout/layout.scss */
+  /* line 182, ../scss/layout/layout.scss */
   .socials .socials__item:hover .socials__link {
     background-color: red; }
-  /* line 185, ../scss/layout/layout.scss */
+  /* line 186, ../scss/layout/layout.scss */
   .socials .socials__item:hover .socials__link:after {
     opacity: 0; }
 
@@ -195,13 +197,14 @@ details, summary {
   margin-right: auto;
   padding-left: 48px;
   padding-right: 48px;
-  position: fixed; }
+  position: fixed;
+  z-index: 11; }
   @media (max-width: 768px) {
     /* line 1, ../scss/layout/header/header.scss */
     .header {
       padding-left: 23px;
       padding-right: 23px; } }
-  /* line 14, ../scss/layout/header/header.scss */
+  /* line 15, ../scss/layout/header/header.scss */
   .header__inner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -214,27 +217,29 @@ details, summary {
             align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    height: 48px; }
-    /* line 20, ../scss/layout/header/header.scss */
+    height: 48px;
+    position: relative;
+    z-index: 11; }
+    /* line 23, ../scss/layout/header/header.scss */
     .header__inner .header__info {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex; }
-      /* line 23, ../scss/layout/header/header.scss */
+      /* line 26, ../scss/layout/header/header.scss */
       .header__inner .header__info p {
         max-width: 130px;
         font-family: 'Lusitana', serif;
         font-size: 18px;
         line-height: 24px;
         color: #393939; }
-        /* line 30, ../scss/layout/header/header.scss */
+        /* line 33, ../scss/layout/header/header.scss */
         .header__inner .header__info p:first-child {
           margin-right: 45px; }
         @media (max-width: 768px) {
-          /* line 34, ../scss/layout/header/header.scss */
+          /* line 37, ../scss/layout/header/header.scss */
           .header__inner .header__info p:nth-child(2) {
             display: none; } }
-    /* line 42, ../scss/layout/header/header.scss */
+    /* line 45, ../scss/layout/header/header.scss */
     .header__inner .menu-btn {
       font-family: 'Prompt', sans-serif;
       font-size: 30px;
@@ -244,30 +249,30 @@ details, summary {
       font-weight: 300;
       overflow-x: hidden;
       color: #191919; }
-      /* line 52, ../scss/layout/header/header.scss */
+      /* line 55, ../scss/layout/header/header.scss */
       .header__inner .menu-btn:hover {
         color: #FF0000; }
         @media (max-width: 1024px) {
-          /* line 52, ../scss/layout/header/header.scss */
+          /* line 55, ../scss/layout/header/header.scss */
           .header__inner .menu-btn:hover {
             color: #191919; } }
-    /* line 61, ../scss/layout/header/header.scss */
+    /* line 64, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active, .header__inner .header__info.is-active p {
       color: whitesmoke; }
-    /* line 65, ../scss/layout/header/header.scss */
+    /* line 68, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active:hover {
       color: #FF0000; }
       @media (max-width: 1024px) {
-        /* line 65, ../scss/layout/header/header.scss */
+        /* line 68, ../scss/layout/header/header.scss */
         .header__inner .menu-btn.is-active:hover {
           color: #fff; } }
-  /* line 74, ../scss/layout/header/header.scss */
+  /* line 77, ../scss/layout/header/header.scss */
   .header__inner.scrolled {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end; }
 
-/* line 79, ../scss/layout/header/header.scss */
+/* line 82, ../scss/layout/header/header.scss */
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -277,65 +282,63 @@ details, summary {
           align-items: center;
   position: absolute;
   top: 0;
-  right: 0;
   left: 0;
-  bottom: 0;
   text-align: left;
   background-color: #191919;
-  z-index: -1;
   visibility: hidden;
   opacity: 0;
+  z-index: 10;
   -webkit-transition: all .375s;
   transition: all .375s;
   width: 100vw;
   height: 100vh; }
-  /* line 96, ../scss/layout/header/header.scss */
+  /* line 97, ../scss/layout/header/header.scss */
   .nav__item {
     font-size: 175px;
     line-height: 180px;
     font-weight: 300; }
     @media (max-width: 1024px) {
-      /* line 96, ../scss/layout/header/header.scss */
+      /* line 97, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 130px;
         line-height: 155px; } }
     @media (max-width: 768px) {
-      /* line 96, ../scss/layout/header/header.scss */
+      /* line 97, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 82px;
         line-height: 90px; } }
     @media (max-width: 390px) {
-      /* line 96, ../scss/layout/header/header.scss */
+      /* line 97, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 71px;
         line-height: 80px; } }
-    /* line 116, ../scss/layout/header/header.scss */
+    /* line 117, ../scss/layout/header/header.scss */
     .nav__item:first-child {
       margin-bottom: 10px; }
-  /* line 121, ../scss/layout/header/header.scss */
+  /* line 122, ../scss/layout/header/header.scss */
   .nav__link {
     color: whitesmoke; }
-    /* line 124, ../scss/layout/header/header.scss */
+    /* line 125, ../scss/layout/header/header.scss */
     .nav__link:hover {
       color: #FF0000; }
 
-/* line 130, ../scss/layout/header/header.scss */
+/* line 131, ../scss/layout/header/header.scss */
 .nav.is-active--nav {
   visibility: visible;
   opacity: 1; }
 
-/* line 135, ../scss/layout/header/header.scss */
+/* line 136, ../scss/layout/header/header.scss */
 .socials-nav {
   position: absolute;
   right: 48px;
   bottom: 48px; }
   @media (max-width: 1024px) {
-    /* line 135, ../scss/layout/header/header.scss */
+    /* line 136, ../scss/layout/header/header.scss */
     .socials-nav {
       left: 48px;
       bottom: 23px; } }
   @media (max-width: 768px) {
-    /* line 135, ../scss/layout/header/header.scss */
+    /* line 136, ../scss/layout/header/header.scss */
     .socials-nav {
       left: 23px; } }
 
@@ -441,89 +444,112 @@ details, summary {
 
 /* line 123, ../scss/general/general.scss */
 .section--about {
-  padding-top: 108px; }
+  padding-top: 108px;
+  position: relative;
+  z-index: 1; }
   /* line 128, ../scss/general/general.scss */
-  .section--about .about__info {
-    margin: 0 auto;
-    padding-top: 75px;
-    max-width: 700px;
-    width: 100%; }
-    @media (max-width: 1024px) {
-      /* line 128, ../scss/general/general.scss */
-      .section--about .about__info {
-        max-width: 525px; } }
-    @media (max-width: 768px) {
-      /* line 128, ../scss/general/general.scss */
-      .section--about .about__info {
-        max-width: 285px; } }
-    /* line 142, ../scss/general/general.scss */
-    .section--about .about__info-text {
-      font-size: 30px;
-      line-height: 48px;
-      font-weight: 300;
-      margin-bottom: 15px; }
+  .section--about .about {
+    position: relative; }
+    /* line 131, ../scss/general/general.scss */
+    .section--about .about__info {
+      margin: 0 auto;
+      padding-top: 75px;
+      max-width: 700px;
+      width: 100%; }
       @media (max-width: 1024px) {
-        /* line 142, ../scss/general/general.scss */
-        .section--about .about__info-text {
-          font-size: 24px;
-          line-height: 34px; } }
+        /* line 131, ../scss/general/general.scss */
+        .section--about .about__info {
+          max-width: 525px; } }
       @media (max-width: 768px) {
-        /* line 142, ../scss/general/general.scss */
-        .section--about .about__info-text {
-          font-size: 19px;
-          line-height: 29px; } }
-    /* line 159, ../scss/general/general.scss */
-    .section--about .about__info-author {
-      margin-top: 50px;
-      font-size: 30px;
-      font-weight: 300; }
+        /* line 131, ../scss/general/general.scss */
+        .section--about .about__info {
+          max-width: 285px; } }
+      /* line 145, ../scss/general/general.scss */
+      .section--about .about__info-text {
+        font-size: 30px;
+        line-height: 48px;
+        font-weight: 300;
+        margin-bottom: 15px; }
+        @media (max-width: 1024px) {
+          /* line 145, ../scss/general/general.scss */
+          .section--about .about__info-text {
+            font-size: 24px;
+            line-height: 34px; } }
+        @media (max-width: 768px) {
+          /* line 145, ../scss/general/general.scss */
+          .section--about .about__info-text {
+            font-size: 19px;
+            line-height: 29px; } }
+        @media (max-width: 390px) {
+          /* line 145, ../scss/general/general.scss */
+          .section--about .about__info-text {
+            font-size: 17px;
+            line-height: 25px; } }
+      /* line 167, ../scss/general/general.scss */
+      .section--about .about__info-author {
+        margin-top: 50px;
+        font-size: 30px;
+        font-weight: 300; }
+        @media (max-width: 1024px) {
+          /* line 167, ../scss/general/general.scss */
+          .section--about .about__info-author {
+            font-size: 24px; } }
+        @media (max-width: 768px) {
+          /* line 167, ../scss/general/general.scss */
+          .section--about .about__info-author {
+            font-size: 20px; } }
+        @media (max-width: 390px) {
+          /* line 167, ../scss/general/general.scss */
+          .section--about .about__info-author {
+            font-size: 17px; } }
+        /* line 184, ../scss/general/general.scss */
+        .section--about .about__info-author a {
+          text-decoration: underline; }
+    /* line 190, ../scss/general/general.scss */
+    .section--about .about__contact {
+      padding-top: 900px;
+      max-width: 815px;
+      width: 100%;
+      margin-left: auto; }
       @media (max-width: 1024px) {
-        /* line 159, ../scss/general/general.scss */
-        .section--about .about__info-author {
-          font-size: 24px; } }
+        /* line 190, ../scss/general/general.scss */
+        .section--about .about__contact {
+          padding-top: 350px;
+          max-width: 475px; } }
       @media (max-width: 768px) {
-        /* line 159, ../scss/general/general.scss */
-        .section--about .about__info-author {
-          font-size: 20px; } }
-      /* line 172, ../scss/general/general.scss */
-      .section--about .about__info-author a {
-        text-decoration: underline; }
-  /* line 178, ../scss/general/general.scss */
-  .section--about .about__contact {
-    margin-top: 900px;
-    max-width: 815px;
-    width: 100%;
-    margin-left: auto; }
-    @media (max-width: 1024px) {
-      /* line 178, ../scss/general/general.scss */
-      .section--about .about__contact {
-        margin-top: 350px;
-        max-width: 475px; } }
-    @media (max-width: 768px) {
-      /* line 178, ../scss/general/general.scss */
-      .section--about .about__contact {
-        max-width: 271px; } }
-    /* line 193, ../scss/general/general.scss */
-    .section--about .about__contact p {
-      font-size: 45px;
-      line-height: 60px;
-      font-weight: 300; }
-      @media (max-width: 1024px) {
-        /* line 193, ../scss/general/general.scss */
-        .section--about .about__contact p {
-          font-size: 27px;
-          line-height: 34px;
-          font-weight: 400; } }
-      @media (max-width: 768px) {
-        /* line 193, ../scss/general/general.scss */
-        .section--about .about__contact p {
-          font-size: 16px;
-          line-height: 19px;
-          font-weight: 300; } }
-    /* line 211, ../scss/general/general.scss */
-    .section--about .about__contact a {
-      -webkit-animation: blink 3s linear infinite;
-      animation: blink 3s linear infinite; }
+        /* line 190, ../scss/general/general.scss */
+        .section--about .about__contact {
+          margin-left: unset; } }
+      @media (max-width: 390px) {
+        /* line 190, ../scss/general/general.scss */
+        .section--about .about__contact {
+          padding-top: 300px; } }
+      /* line 209, ../scss/general/general.scss */
+      .section--about .about__contact p {
+        font-size: 45px;
+        line-height: 60px;
+        font-weight: 300; }
+        @media (max-width: 1024px) {
+          /* line 209, ../scss/general/general.scss */
+          .section--about .about__contact p {
+            font-size: 27px;
+            line-height: 34px;
+            font-weight: 400; } }
+        @media (max-width: 768px) {
+          /* line 209, ../scss/general/general.scss */
+          .section--about .about__contact p {
+            font-size: 20px;
+            line-height: 22px;
+            font-weight: 300; } }
+        @media (max-width: 390px) {
+          /* line 209, ../scss/general/general.scss */
+          .section--about .about__contact p {
+            font-size: 17px;
+            line-height: 19px; } }
+      /* line 232, ../scss/general/general.scss */
+      .section--about .about__contact a {
+        -webkit-animation: blink 3s linear infinite;
+        animation: blink 3s linear infinite; }
 @-webkit-keyframes blink {
   0% {
     color: #191919; }
@@ -546,27 +572,54 @@ details, summary {
     color: #949494; }
   100% {
     color: #191919; } }
-  /* line 234, ../scss/general/general.scss */
+  /* line 255, ../scss/general/general.scss */
   .section--about .socials-about {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     margin-top: 50px; }
-    /* line 238, ../scss/general/general.scss */
+    /* line 259, ../scss/general/general.scss */
     .section--about .socials-about .socials__link {
       color: #191919;
       font-size: 25px; }
       @media (max-width: 1024px) {
-        /* line 238, ../scss/general/general.scss */
+        /* line 259, ../scss/general/general.scss */
         .section--about .socials-about .socials__link {
           font-size: 23px; } }
       @media (max-width: 768px) {
-        /* line 238, ../scss/general/general.scss */
+        /* line 259, ../scss/general/general.scss */
         .section--about .socials-about .socials__link {
           font-size: 20px; } }
-      /* line 250, ../scss/general/general.scss */
+      @media (max-width: 390px) {
+        /* line 259, ../scss/general/general.scss */
+        .section--about .socials-about .socials__link {
+          font-size: 17px; } }
+      /* line 275, ../scss/general/general.scss */
       .section--about .socials-about .socials__link:after {
         background-color: #191919; }
+
+/* line 282, ../scss/general/general.scss */
+.about__background-img {
+  max-width: 383px;
+  width: 100%;
+  height: 383px;
+  position: fixed;
+  z-index: -1;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  pointer-events: none;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear; }
+  @media (max-width: 1024px) {
+    /* line 282, ../scss/general/general.scss */
+    .about__background-img {
+      visibility: hidden; } }
+  /* line 296, ../scss/general/general.scss */
+  .about__background-img img {
+    position: relative;
+    overflow: hidden;
+    -webkit-transform: scale(1.01);
+            transform: scale(1.01); }
 
 /*# sourceMappingURL=main.css.map */
