--- a/src/assets/styles/scss/general/general.scss
+++ b/src/assets/styles/scss/general/general.scss
@@ -200,6 +200,7 @@
 
       @include media-mobile {
         margin-left: unset;
+        margin-bottom: 30px;
       }
 
       @include media-mobile-low {
