--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -10,9 +10,10 @@
 
 /* line 9, ../scss/layout/layout.scss */
 html, body {
-  width: 100%; }
+  width: 100%;
+  margin: 0; }
 
-/* line 13, ../scss/layout/layout.scss */
+/* line 14, ../scss/layout/layout.scss */
 body {
   position: relative;
   font-family: 'Prompt', sans-serif;
@@ -24,40 +25,40 @@ body {
   cursor: none;
   isolation: isolate; }
 
-/* line 25, ../scss/layout/layout.scss */
+/* line 26, ../scss/layout/layout.scss */
 a, button, input, select {
   outline: none;
   border: none;
   cursor: none; }
 
-/* line 31, ../scss/layout/layout.scss */
+/* line 32, ../scss/layout/layout.scss */
 a {
   text-decoration: none;
   color: #191919; }
-  /* line 35, ../scss/layout/layout.scss */
+  /* line 36, ../scss/layout/layout.scss */
   a:hover {
     color: #FF0000; }
 
-/* line 40, ../scss/layout/layout.scss */
+/* line 41, ../scss/layout/layout.scss */
 ul, li {
   list-style-type: none; }
 
-/* line 44, ../scss/layout/layout.scss */
+/* line 45, ../scss/layout/layout.scss */
 details, summary {
   outline: none;
   border: none; }
 
-/* line 49, ../scss/layout/layout.scss */
+/* line 50, ../scss/layout/layout.scss */
 ::-webkit-scrollbar {
   width: 0;
   height: 0; }
 
-/* line 54, ../scss/layout/layout.scss */
+/* line 55, ../scss/layout/layout.scss */
 ::-moz-selection {
   background-color: #FF0000;
   color: #fff; }
 
-/* line 59, ../scss/layout/layout.scss */
+/* line 60, ../scss/layout/layout.scss */
 ::-moz-selection {
   background-color: #FF0000;
   color: #fff; }
@@ -68,7 +69,7 @@ details, summary {
 /*========================
         Common Styles
 ==========================*/
-/* line 68, ../scss/layout/layout.scss */
+/* line 69, ../scss/layout/layout.scss */
 .main {
   width: 100%;
   margin-left: auto;
@@ -76,17 +77,17 @@ details, summary {
   padding-left: 48px;
   padding-right: 48px; }
   @media (max-width: 768px) {
-    /* line 68, ../scss/layout/layout.scss */
+    /* line 69, ../scss/layout/layout.scss */
     .main {
       padding-left: 23px;
       padding-right: 23px; } }
 
-/* line 81, ../scss/layout/layout.scss */
+/* line 82, ../scss/layout/layout.scss */
 .no-scroll {
   overflow: hidden;
   position: fixed; }
 
-/* line 86, ../scss/layout/layout.scss */
+/* line 87, ../scss/layout/layout.scss */
 .cursor, .aura {
   position: fixed;
   border-radius: 100%;
@@ -99,12 +100,12 @@ details, summary {
   pointer-events: none;
   z-index: 99; }
   @media (max-width: 1024px) {
-    /* line 86, ../scss/layout/layout.scss */
+    /* line 87, ../scss/layout/layout.scss */
     .cursor, .aura {
       opacity: 1;
       visibility: hidden; } }
 
-/* line 104, ../scss/layout/layout.scss */
+/* line 105, ../scss/layout/layout.scss */
 .cursor {
   width: 8px;
   height: 8px;
@@ -112,15 +113,15 @@ details, summary {
   -webkit-transition: .2s linear background-color;
   transition: .2s linear background-color; }
 
-/* line 112, ../scss/layout/layout.scss */
+/* line 113, ../scss/layout/layout.scss */
 .cursor.is-active {
   background-color: #FF0000; }
 
-/* line 116, ../scss/layout/layout.scss */
+/* line 117, ../scss/layout/layout.scss */
 .cursor.cursor-red {
   background-color: #FF0000; }
 
-/* line 120, ../scss/layout/layout.scss */
+/* line 121, ../scss/layout/layout.scss */
 .aura {
   width: 32px;
   height: 32px;
@@ -132,48 +133,48 @@ details, summary {
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
 
-/* line 131, ../scss/layout/layout.scss */
+/* line 132, ../scss/layout/layout.scss */
 .title {
   font-size: 175px;
   line-height: 175px;
   font-weight: 300; }
   @media (max-width: 1024px) {
-    /* line 131, ../scss/layout/layout.scss */
+    /* line 132, ../scss/layout/layout.scss */
     .title {
       font-size: 97px;
       line-height: 97px; } }
   @media (max-width: 768px) {
-    /* line 131, ../scss/layout/layout.scss */
+    /* line 132, ../scss/layout/layout.scss */
     .title {
       font-size: 71px;
       line-height: 78px; } }
   @media (max-width: 390px) {
-    /* line 131, ../scss/layout/layout.scss */
+    /* line 132, ../scss/layout/layout.scss */
     .title {
       font-size: 62px;
       line-height: 74px; } }
 
-/* line 152, ../scss/layout/layout.scss */
+/* line 153, ../scss/layout/layout.scss */
 .socials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 25px; }
-  /* line 156, ../scss/layout/layout.scss */
+  /* line 157, ../scss/layout/layout.scss */
   .socials__link {
     color: whitesmoke;
     font-size: 16px;
     font-weight: 300;
     position: relative; }
     @media (max-width: 768px) {
-      /* line 156, ../scss/layout/layout.scss */
+      /* line 157, ../scss/layout/layout.scss */
       .socials__link {
         font-size: 11px; } }
     @media (max-width: 390px) {
-      /* line 156, ../scss/layout/layout.scss */
+      /* line 157, ../scss/layout/layout.scss */
       .socials__link {
         font-size: 10px; } }
-    /* line 170, ../scss/layout/layout.scss */
+    /* line 171, ../scss/layout/layout.scss */
     .socials__link:after {
       content: '';
       position: absolute;
@@ -183,13 +184,13 @@ details, summary {
       background-color: whitesmoke;
       width: 100%; }
       @media (max-width: 768px) {
-        /* line 170, ../scss/layout/layout.scss */
+        /* line 171, ../scss/layout/layout.scss */
         .socials__link:after {
           height: 1px; } }
-  /* line 185, ../scss/layout/layout.scss */
+  /* line 186, ../scss/layout/layout.scss */
   .socials .socials__item:hover .socials__link {
     background-color: red; }
-  /* line 189, ../scss/layout/layout.scss */
+  /* line 190, ../scss/layout/layout.scss */
   .socials .socials__item:hover .socials__link:after {
     opacity: 0; }
 
@@ -300,7 +301,7 @@ details, summary {
   -webkit-transition: all .375s;
   transition: all .375s;
   width: 100vw;
-  min-height: 100vh; }
+  height: 100vh; }
   /* line 103, ../scss/layout/header/header.scss */
   .nav__item {
     font-size: 175px;
@@ -528,34 +529,35 @@ details, summary {
       @media (max-width: 768px) {
         /* line 190, ../scss/general/general.scss */
         .section--about .about__contact {
-          margin-left: unset; } }
+          margin-left: unset;
+          margin-bottom: 30px; } }
       @media (max-width: 390px) {
         /* line 190, ../scss/general/general.scss */
         .section--about .about__contact {
           padding-top: 300px; } }
-      /* line 209, ../scss/general/general.scss */
+      /* line 210, ../scss/general/general.scss */
       .section--about .about__contact p {
         font-size: 45px;
         line-height: 60px;
         font-weight: 300; }
         @media (max-width: 1024px) {
-          /* line 209, ../scss/general/general.scss */
+          /* line 210, ../scss/general/general.scss */
           .section--about .about__contact p {
             font-size: 27px;
             line-height: 34px;
             font-weight: 400; } }
         @media (max-width: 768px) {
-          /* line 209, ../scss/general/general.scss */
+          /* line 210, ../scss/general/general.scss */
           .section--about .about__contact p {
             font-size: 20px;
             line-height: 22px;
             font-weight: 300; } }
         @media (max-width: 390px) {
-          /* line 209, ../scss/general/general.scss */
+          /* line 210, ../scss/general/general.scss */
           .section--about .about__contact p {
             font-size: 17px;
             line-height: 19px; } }
-      /* line 232, ../scss/general/general.scss */
+      /* line 233, ../scss/general/general.scss */
       .section--about .about__contact a {
         -webkit-animation: blink 3s linear infinite;
         animation: blink 3s linear infinite; }
@@ -581,34 +583,34 @@ details, summary {
     color: #949494; }
   100% {
     color: #191919; } }
-  /* line 255, ../scss/general/general.scss */
+  /* line 256, ../scss/general/general.scss */
   .section--about .socials-about {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     margin-top: 50px; }
-    /* line 259, ../scss/general/general.scss */
+    /* line 260, ../scss/general/general.scss */
     .section--about .socials-about .socials__link {
       color: #191919;
       font-size: 25px; }
       @media (max-width: 1024px) {
-        /* line 259, ../scss/general/general.scss */
+        /* line 260, ../scss/general/general.scss */
         .section--about .socials-about .socials__link {
           font-size: 23px; } }
       @media (max-width: 768px) {
-        /* line 259, ../scss/general/general.scss */
+        /* line 260, ../scss/general/general.scss */
         .section--about .socials-about .socials__link {
           font-size: 20px; } }
       @media (max-width: 390px) {
-        /* line 259, ../scss/general/general.scss */
+        /* line 260, ../scss/general/general.scss */
         .section--about .socials-about .socials__link {
           font-size: 17px; } }
-      /* line 275, ../scss/general/general.scss */
+      /* line 276, ../scss/general/general.scss */
       .section--about .socials-about .socials__link:after {
         background-color: #191919; }
 
-/* line 282, ../scss/general/general.scss */
+/* line 283, ../scss/general/general.scss */
 .about__background-img {
   max-width: 383px;
   width: 100%;
@@ -621,13 +623,14 @@ details, summary {
   -webkit-transition: all .2s linear;
   transition: all .2s linear; }
   @media (max-width: 1024px) {
-    /* line 282, ../scss/general/general.scss */
+    /* line 283, ../scss/general/general.scss */
     .about__background-img {
       visibility: hidden; } }
-  /* line 296, ../scss/general/general.scss */
+  /* line 297, ../scss/general/general.scss */
   .about__background-img img {
     position: relative;
     overflow: hidden;
     -webkit-transform: scale(1.01);
             transform: scale(1.01); }
+
 /*# sourceMappingURL=main.css.map */
