--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -98,7 +98,7 @@
   z-index: 10;
   transition: all .375s;
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
 
   &__item {
     font-size: 175px;
