--- a/src/assets/styles/scss/general/general.scss
+++ b/src/assets/styles/scss/general/general.scss
@@ -300,3 +300,261 @@
     transform: scale(1.01);
   }
 }
+
+
+.section--jungles {
+  background-color: $secondary;
+  color: $white;
+
+  .noise {
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 0;
+
+    div {
+      position: absolute;
+      inset: -500px;
+      background: url("/src/assets/images/common/noise.png") 0px 0px / 320px 320px transparent;
+      opacity: 0.2;
+      animation: noise 1s steps(8, end) infinite both;
+      
+      @keyframes noise {
+        0% {
+          -webkit-transform: translateX(0px, 0px);
+          transform: translateX(0px, 0px);
+        }
+
+        10% {
+          -webkit-transform: translate(-100px, 100px);
+          transform: translate(-100px, 100px);
+        }
+
+        20% {
+          -webkit-transform: translate(150px, -100px);
+          transform: translate(150px, -100px);
+        }
+
+        30% {
+          -webkit-transform: translate(-100px, 100px);
+          transform: translate(-100px, 100px);
+        }
+
+        40% {
+          -webkit-transform: translate(100px, -150px);
+          transform: translate(100px, -150px);
+        }
+
+        50% {
+          -webkit-transform: translate(-100px, 200px);
+          transform: translate(-100px, 200px);
+        }
+
+        60% {
+          -webkit-transform: translate(-200px, -100px);
+          transform: translate(-200px, -100px);
+        }
+
+        70% {
+          -webkit-transform: translateY(50px, 100px);
+          transform: translateY(50px, 100px);
+        }
+
+        80% {
+          -webkit-transform: translate(100px, -150px);
+          transform: translate(100px, -150px);
+        }
+
+        90% {
+          -webkit-transform: translate(0px, 200px);
+          transform: translate(0px, 200px);
+        }
+
+        100% {
+          -webkit-transform: translate(-100px, 100px);
+          transform: translate(-100px, 100px);
+        }
+      }
+    }
+  }
+
+  .jungles__title-wrap {
+    position: fixed;
+    z-index: 14;
+    width: 100%;
+
+    div {
+      display: block;
+      width: 200%;
+      height: 250px;
+      position: absolute;
+      overflow: hidden;
+      -webkit-animation: moving 30s linear infinite;
+      animation: moving 30s linear infinite;
+
+      @include media-mobile {
+        height: 120px;
+      }
+
+      span {
+        padding: 0 45px;
+        width: 50%;
+        font-size: 200px;
+        font-weight: 700;
+        line-height: 225px;
+        color: transparent;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+
+        @include media-mobile {
+          font-size: 110px;
+          line-height: 110px;
+          padding: 0 5px;
+        }
+      }
+    }
+
+    @-webkit-keyframes moving {
+      0% { left: 0; }
+      100% { left: -100%; }
+    }
+
+    @keyframes moving {
+      0% { left: 0; }
+      100% { left: -100%; }
+    }
+  }
+
+  .jungles {
+    padding-right: 48px;
+    padding-left: 48px;
+    padding-top: 300px;
+    position: relative;
+    z-index: 15;
+
+    @include media-mobile {
+      padding-left: 23px;
+      padding-right: 23px;
+      padding-top: 165px;
+    }
+
+    &__desc {
+      max-width: 450px;
+
+      @include media-mobile {
+        margin: 0 auto;
+        text-align: center;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+
+      a {
+        color: $red;
+        text-decoration: underline;
+        display: block;
+        margin-top: 30px;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+
+    &__list {
+      margin-top: 100px;
+      @include flex-justify(space-between);
+      flex-wrap: wrap;
+      width: 100%;
+
+      @include media-mobile {
+        margin-top: 60px;
+      }
+
+      .jungles__item {
+        width: 23%;
+        margin-bottom: 150px;
+        display: flex;
+        flex-direction: column;
+
+        @include media-tablet {
+          width: 43%;
+        }
+
+        @include media-mobile {
+          width: 100%;
+          align-items: center;
+          margin-bottom: 50px;
+        }
+
+        &:nth-child(4n-2) {
+          margin-top: 50px;
+
+          @include media-mobile {
+            margin-top: 50px;
+          }
+        }
+
+        &:nth-child(4n-1) {
+          margin-top: 100px;
+
+          @include media-mobile {
+            margin-top: 50px;
+          }
+        }
+
+        &:nth-child(4n) {
+          margin-top: 150px;
+
+          @include media-mobile {
+            margin-top: 50px;
+          }
+        }
+
+        img {
+          max-width: 400px;
+          width: 100%;
+          transition: transform 2.5s ease-out 0s;
+        }
+
+        &-info {
+          max-width: 400px;
+          width: 100%;
+
+          .jungles__item-title {
+            font-size: 18px;
+            font-weight: 700;
+            margin-bottom: 10px;
+            margin-top: 10px;
+          }
+
+          .jungles__item-date {
+            font-size: 14px;
+            color: #d1d1d1;
+          }
+
+          .jungles__item-desc {
+            max-width: 400px;
+          }
+
+          .jungles__item-link {
+            max-width: fit-content;
+            display: block;
+            margin-top: 25px;
+            color: $red;
+            text-decoration: underline;
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
+        }
+      }
+    }
+  }
+}
