--- a/src/assets/styles/scss/layout/layout.scss
+++ b/src/assets/styles/scss/layout/layout.scss
@@ -159,6 +159,7 @@ details, summary {
     font-size: 16px;
     font-weight: 300;
     position: relative;
+    max-width: fit-content;
 
     @include media-mobile {
       font-size: 11px;
@@ -181,10 +182,6 @@ details, summary {
         height: 1px;
       }
     }
-  }
-
-  .socials__item:hover .socials__link {
-    background-color: red;
   }
 
   .socials__item:hover .socials__link:after {
